fix(Tabs):indicator is now behind text

--- a/src/components/UI/Tabs.module.scss
+++ b/src/components/UI/Tabs.module.scss
@@ -30,6 +30,7 @@ $indicator-width: 4px;
   width: 100%;
   height: 100%;
   position: absolute;
+  z-index: -1;
 }
 
 .top {
